<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        tools:srcCompat="@drawable/recipes_icon" />

    <TextView
        android:id="@+id/shop_list_ingredient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shop_list_storage_amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/storage_amount"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <TextView
        android:id="@+id/shop_list_storage_amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/shop_list_storage_amount_title"
        app:layout_constraintStart_toEndOf="@+id/shop_list_storage_amount_title" />

    <TextView
        android:id="@+id/shop_list_buy_amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/amount_needed"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_list_storage_amount_title" />

    <TextView
        android:id="@+id/shop_list_buy_amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/shop_list_buy_amount_title"
        app:layout_constraintTop_toBottomOf="@+id/shop_list_storage_amount_value" />

    <TextView
        android:id="@+id/shop_list_unit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/shopping_list_adapter_unit"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_list_buy_amount_title" />

    <TextView
        android:id="@+id/shop_list_unit_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/shop_list_unit_title"
        app:layout_constraintTop_toBottomOf="@+id/shop_list_buy_amount_value" />

    <TextView
        android:id="@+id/shop_list_category_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/shopping_list_adapter_category"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_list_unit_title" />

    <TextView
        android:id="@+id/shop_list_category_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/shop_list_category_title"
        app:layout_constraintTop_toBottomOf="@+id/shop_list_unit_value" />

    <ImageView
        android:id="@+id/shop_list_ingredient_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/shop_list_buy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/shop_list_category_value"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton"
        tools:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/shop_list_buy_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/buy_prompt"
        app:icon="@drawable/cart_icon"
        app:iconSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shop_list_category_title" />
</androidx.constraintlayout.widget.ConstraintLayout>